<resources>
    <string name="app_name">Dawa</string>
    <string name="login_to_existing_account">Login To Existing Account</string>
    <string name="register_a_new_account">ليس لدي حساب , إنشاء حساب</string>
    <string name="create_account">إنشاء حساب</string>
    <string name="name_field">الأسم</string>
    <string name="password_label">كلمة المرور</string>
    <string name="phone_number">رقم الهاتف</string>
    <string name="create">إنشاء</string>
    <string name="fill_field_please">من فضلك قم بملئ هذا الحقل</string>
    <string name="terms_conditions">بإنشاء حساب فأنت توافق علي شروط و أحكام استخدام تطبيق تكافل</string>
    <string name="terms_conditions_word">شروط و أحكام</string>
    <string name="terms_and_conditions_title"><![CDATA[Terms & Conditions]]></string>
    <string name="sign_in">تسجيل دخول</string>
    <string name="forgot_password">نسيت كلمه المرور؟</string>
    <string name="login_btn">تسجيل الدخول</string>
    <string name="valid_field_please">من فضلك قم بادخال بيانات صحيحه</string>
    <string name="valid_password_length">من فضلك ادخل كلمه مرور بحد ادني
        6
        رموز</string>
    <string name="loading">جاري التحميل</string>
    <string name="general_error">حدث خطأما من فضلك حاول مره اخرى</string>


    <string name="full_name_regex" translatable="false">[A-Za-z ]+</string>
    <string name="phone_number_regex" translatable="false">01[0|1|2|5][0-9]{8}</string>
    <string name="phone_hint" translatable="false">00k 010 000-00-000</string>

    <string name="account">الحساب</string>
    <string name="save_Changes">حفظ التغيرات</string>
    <string name="logout_btn">تسجيل خروج</string>
    <string name="my_medications">ادويتي</string>
    <string name="search">ابحث</string>
    <string name="permission_Denied">طلب الاذن مرفوض</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="medication_name">أسم الدواء</string>
    <string name="add_image">اضف صوره للدواء</string>
    <string name="add_medication">إضافه الدواء</string>
    <string name="category">الفئه</string>
    <string name="address">العنوان</string>
    <string name="pres">حجز</string>
    <string name="reserved">تم حجز الدواء بنجاح</string>
    <string name="alreadyPreserved">الدواء محجوز بالفعل , الرجاء اختيار دواء اخر</string>
    <string name="facebook_app_id">876166342858313</string>
    <string name="fb_login_protocol_scheme">fb876166342858313</string>
    <string name="code">Code</string>
    <string name="verify">Verify</string>
    <string name="preservation">حجوزاتي</string>
    <string name="deletePreserved">تم مسح حجز الدواء بنجاح</string>
    <string name="NoPreservation">لا يوجد حجوزات</string>



</resources>
