<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_180sdp"
        android:background="@drawable/background_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:src="@drawable/back"
            android:tint="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:src="@drawable/logo_white_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_30sdp"
        android:fontFamily="@font/sans_plain"
        android:text="@string/create_account"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layoutDirection="rtl">

            <TextView
                android:layout_width="@dimen/_55sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/sans_plain"
                android:text="@string/name_field"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/fieldFullName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_28sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_5sdp"
                android:background="@drawable/rounded_shape_edit_text"
                android:fontFamily="@font/sans_plain"
                android:inputType="textPersonName"
                android:lines="1"
                android:padding="@dimen/_2sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:textAlignment="viewStart"
                tools:ignore="RtlCompat"
                tools:text="محمود عارف محمود" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layoutDirection="rtl">

            <TextView
                android:layout_width="@dimen/_55sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/sans_plain"
                android:text="@string/password_label"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/fieldPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_28sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_5sdp"
                android:background="@drawable/rounded_shape_edit_text"
                android:fontFamily="@font/sans_plain"
                android:inputType="textPassword"
                android:lines="1"
                android:padding="@dimen/_2sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:textAlignment="viewStart"
                tools:ignore="RtlCompat"
                tools:text="test password 123" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layoutDirection="rtl">

            <TextView

                android:layout_width="@dimen/_55sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/sans_plain"
                android:text="@string/phone_number"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/fieldPhone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_28sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_5sdp"
                android:background="@drawable/rounded_shape_edit_text"
                android:fontFamily="@font/sans_plain"
                android:hint="@string/phone_hint"
                android:inputType="phone"
                android:lines="1"
                android:maxLength="14"
                android:nextFocusForward="@id/btnCreate"
                android:padding="@dimen/_2sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:textAlignment="viewStart"
                tools:ignore="RtlCompat" />


        </LinearLayout>

        <TextView

            android:id="@+id/terms_conditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/sans_plain"
            android:text="@string/terms_conditions"
            android:textSize="@dimen/_8sdp"
            tools:ignore="RtlCompat" />


    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/sans_plain"
        android:paddingStart="@dimen/_60sdp"
        android:paddingEnd="@dimen/_60sdp"
        android:text="@string/create"
        android:textColor="@android:color/white"
        app:cornerRadius="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>